# quiesce

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
src/: CMakeLists.txt  maths.cpp  maths_test.cc
src/include/: utils.hxx
src/internal/: harris_michael_list.cxx  harris_michael_list.hxx  harris_michael_list_test.cc  treiber_stack.hxx
src/memory/: ebr.cxx
